--- a/static/css/result.css
+++ b/static/css/result.css
@@ -70,4 +70,38 @@ p {
     border-radius: 10px;
 }
 
+.result {
+    display: none;
 
+    margin: 0 auto;
+
+    width: 100%;
+    max-width: 1200px;
+}
+.result img {
+    position: absolute;
+    width: 100%;
+    max-width: 1200px;
+}
+
+.again {
+    text-decoration: none;
+    position: absolute;
+    bottom: 4vh;
+    right: 45vw;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: normal;
+    text-align: center;
+    font-size: 30px;
+    border: 4px solid var(--main-color);
+    padding: 10px 50px;
+    color: white;
+    border-radius: 10px;
+}
+
+
+.again:hover {
+    box-shadow:0 0 20px  var(--main-color);
+
+    border: 4px solid #B3EA8DFF;
+}
