--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -102,15 +102,14 @@ p {
 
 #description {
     position: absolute;
-    bottom: 18vh;
-    text-align: left;
-    left: 22vw;
-    margin: 0;
     font-weight: lighter;
     width: var(--width-of-slide);
+    bottom: 18vh;
+    left: 22vw;
+    text-align: left;
+    margin: 0;
 
 }
-
 .submit {
     font-size: 30px;
     z-index: 1;
@@ -122,8 +121,8 @@ p {
     text-decoration: none;
     padding: 10px 30px;
     color: white;
-    bottom: 3%;
-    right: 43%;
+    bottom: 3vh;
+    right: 40vw;
 }
 
 .submit:hover {
